// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public queries > allFixtures 1`] = `
[
  {
    "cancelledReason": null,
    "capacity": 24,
    "id": "<uuid-1>",
    "kickoffAt": "2026-09-16T16:00:00.000Z",
    "status": "open",
    "venue": "Zandvlei Sports Ground",
  },
  {
    "cancelledReason": null,
    "capacity": 24,
    "id": "<uuid-2>",
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "status": "played",
    "venue": "Zandvlei Sports Ground",
  },
  {
    "cancelledReason": null,
    "capacity": 24,
    "id": "<uuid-3>",
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "status": "played",
    "venue": "Zandvlei Sports Ground",
  },
  {
    "cancelledReason": null,
    "capacity": 24,
    "id": "<uuid-4>",
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "status": "played",
    "venue": "Zandvlei Sports Ground",
  },
  {
    "cancelledReason": null,
    "capacity": 24,
    "id": "<uuid-5>",
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "status": "played",
    "venue": "Zandvlei Sports Ground",
  },
]
`;

exports[`public queries > allPlayers 1`] = `
[
  {
    "displayName": "Big Dave",
    "emoji": "🐻",
    "id": "<uuid-1>",
    "isActive": true,
    "rating": 66,
  },
  {
    "displayName": "Craig",
    "emoji": "🐢",
    "id": "<uuid-2>",
    "isActive": true,
    "rating": 60,
  },
  {
    "displayName": "Gaz",
    "emoji": "🪃",
    "id": "<uuid-3>",
    "isActive": true,
    "rating": 62,
  },
  {
    "displayName": "Jonty",
    "emoji": "🎩",
    "id": "<uuid-4>",
    "isActive": true,
    "rating": 69,
  },
  {
    "displayName": "Kaggy",
    "emoji": "🐆",
    "id": "<uuid-5>",
    "isActive": true,
    "rating": 71,
  },
  {
    "displayName": "Leo",
    "emoji": "🦁",
    "id": "<uuid-6>",
    "isActive": true,
    "rating": 72.5,
  },
  {
    "displayName": "Marco",
    "emoji": "🍕",
    "id": "<uuid-7>",
    "isActive": true,
    "rating": 67.5,
  },
  {
    "displayName": "Ndu",
    "emoji": "🌟",
    "id": "<uuid-8>",
    "isActive": true,
    "rating": 68.5,
  },
  {
    "displayName": "Ollie",
    "emoji": "🦅",
    "id": "<uuid-9>",
    "isActive": true,
    "rating": 63,
  },
  {
    "displayName": "Pieter",
    "emoji": "🧤",
    "id": "<uuid-10>",
    "isActive": true,
    "rating": 70,
  },
  {
    "displayName": "Ruan",
    "emoji": "🧱",
    "id": "<uuid-11>",
    "isActive": true,
    "rating": 64.5,
  },
  {
    "displayName": "Shaun",
    "emoji": "🦈",
    "id": "<uuid-12>",
    "isActive": true,
    "rating": 65.5,
  },
  {
    "displayName": "Sipho",
    "emoji": "⚡",
    "id": "<uuid-13>",
    "isActive": true,
    "rating": 78,
  },
  {
    "displayName": "Thabo",
    "emoji": "🚀",
    "id": "<uuid-14>",
    "isActive": true,
    "rating": 75.5,
  },
  {
    "displayName": "Themba",
    "emoji": "🔥",
    "id": "<uuid-15>",
    "isActive": true,
    "rating": 74,
  },
  {
    "displayName": "Yusuf",
    "emoji": "🌊",
    "id": "<uuid-16>",
    "isActive": true,
    "rating": 66.5,
  },
]
`;

exports[`public queries > badgesForPlayer 1`] = `
[
  {
    "code": "streak_5",
    "description": "Five Wednesdays in a row.",
    "earnedAt": "<timestamp>",
    "emoji": "📅",
    "name": "Ever Present",
    "tier": "silver",
  },
  {
    "code": "first_in",
    "description": "First to say yes on the team sheet.",
    "earnedAt": "<timestamp>",
    "emoji": "⚡",
    "name": "First In",
    "tier": "bronze",
  },
  {
    "code": "debut",
    "description": "Played your first Wednesday.",
    "earnedAt": "<timestamp>",
    "emoji": "🎬",
    "name": "Debut",
    "tier": "bronze",
  },
]
`;

exports[`public queries > careerTable 1`] = `
[
  {
    "appearances": 4,
    "assists": 5,
    "displayName": "Big Dave",
    "emoji": "🐻",
    "goals": 7,
    "motmVotes": 15,
    "nutmegs": 6,
    "playerId": "<uuid-1>",
    "rating": 66,
    "saves": 0,
    "tackles": 12,
  },
  {
    "appearances": 4,
    "assists": 3,
    "displayName": "Craig",
    "emoji": "🐢",
    "goals": 7,
    "motmVotes": 15,
    "nutmegs": 3,
    "playerId": "<uuid-2>",
    "rating": 60,
    "saves": 0,
    "tackles": 16,
  },
  {
    "appearances": 4,
    "assists": 3,
    "displayName": "Gaz",
    "emoji": "🪃",
    "goals": 2,
    "motmVotes": 0,
    "nutmegs": 4,
    "playerId": "<uuid-3>",
    "rating": 62,
    "saves": 2,
    "tackles": 13,
  },
  {
    "appearances": 4,
    "assists": 3,
    "displayName": "Jonty",
    "emoji": "🎩",
    "goals": 3,
    "motmVotes": 1,
    "nutmegs": 5,
    "playerId": "<uuid-4>",
    "rating": 69,
    "saves": 4,
    "tackles": 10,
  },
  {
    "appearances": 4,
    "assists": 6,
    "displayName": "Kaggy",
    "emoji": "🐆",
    "goals": 5,
    "motmVotes": 15,
    "nutmegs": 5,
    "playerId": "<uuid-5>",
    "rating": 71,
    "saves": 0,
    "tackles": 4,
  },
  {
    "appearances": 4,
    "assists": 3,
    "displayName": "Leo",
    "emoji": "🦁",
    "goals": 3,
    "motmVotes": 1,
    "nutmegs": 5,
    "playerId": "<uuid-6>",
    "rating": 72.5,
    "saves": 4,
    "tackles": 9,
  },
  {
    "appearances": 4,
    "assists": 3,
    "displayName": "Marco",
    "emoji": "🍕",
    "goals": 8,
    "motmVotes": 0,
    "nutmegs": 6,
    "playerId": "<uuid-7>",
    "rating": 67.5,
    "saves": 6,
    "tackles": 11,
  },
  {
    "appearances": 4,
    "assists": 4,
    "displayName": "Ndu",
    "emoji": "🌟",
    "goals": 3,
    "motmVotes": 0,
    "nutmegs": 4,
    "playerId": "<uuid-8>",
    "rating": 68.5,
    "saves": 6,
    "tackles": 12,
  },
  {
    "appearances": 4,
    "assists": 6,
    "displayName": "Ollie",
    "emoji": "🦅",
    "goals": 1,
    "motmVotes": 0,
    "nutmegs": 4,
    "playerId": "<uuid-9>",
    "rating": 63,
    "saves": 0,
    "tackles": 10,
  },
  {
    "appearances": 4,
    "assists": 4,
    "displayName": "Pieter",
    "emoji": "🧤",
    "goals": 4,
    "motmVotes": 0,
    "nutmegs": 5,
    "playerId": "<uuid-10>",
    "rating": 70,
    "saves": 8,
    "tackles": 19,
  },
  {
    "appearances": 4,
    "assists": 5,
    "displayName": "Ruan",
    "emoji": "🧱",
    "goals": 0,
    "motmVotes": 0,
    "nutmegs": 1,
    "playerId": "<uuid-11>",
    "rating": 64.5,
    "saves": 5,
    "tackles": 11,
  },
  {
    "appearances": 4,
    "assists": 2,
    "displayName": "Shaun",
    "emoji": "🦈",
    "goals": 2,
    "motmVotes": 0,
    "nutmegs": 3,
    "playerId": "<uuid-12>",
    "rating": 65.5,
    "saves": 8,
    "tackles": 13,
  },
  {
    "appearances": 4,
    "assists": 3,
    "displayName": "Sipho",
    "emoji": "⚡",
    "goals": 2,
    "motmVotes": 1,
    "nutmegs": 5,
    "playerId": "<uuid-13>",
    "rating": 78,
    "saves": 0,
    "tackles": 4,
  },
  {
    "appearances": 4,
    "assists": 4,
    "displayName": "Thabo",
    "emoji": "🚀",
    "goals": 8,
    "motmVotes": 15,
    "nutmegs": 5,
    "playerId": "<uuid-14>",
    "rating": 75.5,
    "saves": 0,
    "tackles": 12,
  },
  {
    "appearances": 4,
    "assists": 4,
    "displayName": "Themba",
    "emoji": "🔥",
    "goals": 1,
    "motmVotes": 0,
    "nutmegs": 5,
    "playerId": "<uuid-15>",
    "rating": 74,
    "saves": 6,
    "tackles": 8,
  },
  {
    "appearances": 4,
    "assists": 4,
    "displayName": "Yusuf",
    "emoji": "🌊",
    "goals": 6,
    "motmVotes": 1,
    "nutmegs": 8,
    "playerId": "<uuid-16>",
    "rating": 66.5,
    "saves": 7,
    "tackles": 7,
  },
]
`;

exports[`public queries > currentSeason 1`] = `
{
  "endedOn": null,
  "id": "<uuid-1>",
  "name": "Spring 2026",
  "startedOn": "2026-08-05",
}
`;

exports[`public queries > fixtureById 1`] = `
{
  "cancelledReason": null,
  "capacity": 24,
  "id": "<uuid-1>",
  "kickoffAt": "2026-08-12T16:00:00.000Z",
  "status": "played",
  "venue": "Zandvlei Sports Ground",
}
`;

exports[`public queries > fixtureStatRows 1`] = `
[
  {
    "assists": 1,
    "displayName": "Big Dave",
    "emoji": "🐻",
    "fixtureId": "<uuid-2>",
    "goals": 2,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-1>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 0,
    "displayName": "Craig",
    "emoji": "🐢",
    "fixtureId": "<uuid-2>",
    "goals": 1,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-3>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 0,
    "displayName": "Gaz",
    "emoji": "🪃",
    "fixtureId": "<uuid-2>",
    "goals": 0,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-4>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 0,
    "displayName": "Jonty",
    "emoji": "🎩",
    "fixtureId": "<uuid-2>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-5>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 2,
    "displayName": "Kaggy",
    "emoji": "🐆",
    "fixtureId": "<uuid-2>",
    "goals": 2,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 15,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-6>",
    "saves": 0,
    "tackles": 3,
  },
  {
    "assists": 0,
    "displayName": "Leo",
    "emoji": "🦁",
    "fixtureId": "<uuid-2>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-7>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 1,
    "displayName": "Marco",
    "emoji": "🍕",
    "fixtureId": "<uuid-2>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-8>",
    "saves": 6,
    "tackles": 0,
  },
  {
    "assists": 1,
    "displayName": "Ndu",
    "emoji": "🌟",
    "fixtureId": "<uuid-2>",
    "goals": 0,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-9>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 0,
    "displayName": "Ollie",
    "emoji": "🦅",
    "fixtureId": "<uuid-2>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-10>",
    "saves": 0,
    "tackles": 2,
  },
  {
    "assists": 2,
    "displayName": "Pieter",
    "emoji": "🧤",
    "fixtureId": "<uuid-2>",
    "goals": 1,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-11>",
    "saves": 6,
    "tackles": 6,
  },
  {
    "assists": 2,
    "displayName": "Ruan",
    "emoji": "🧱",
    "fixtureId": "<uuid-2>",
    "goals": 0,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-12>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 0,
    "displayName": "Shaun",
    "emoji": "🦈",
    "fixtureId": "<uuid-2>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-13>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 1,
    "displayName": "Sipho",
    "emoji": "⚡",
    "fixtureId": "<uuid-2>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 1,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-14>",
    "saves": 0,
    "tackles": 2,
  },
  {
    "assists": 1,
    "displayName": "Thabo",
    "emoji": "🚀",
    "fixtureId": "<uuid-2>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 9,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-15>",
    "saves": 0,
    "tackles": 4,
  },
  {
    "assists": 0,
    "displayName": "Themba",
    "emoji": "🔥",
    "fixtureId": "<uuid-2>",
    "goals": 1,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-16>",
    "saves": 0,
    "tackles": 3,
  },
  {
    "assists": 1,
    "displayName": "Yusuf",
    "emoji": "🌊",
    "fixtureId": "<uuid-2>",
    "goals": 1,
    "goalsAgainst": 9,
    "goalsFor": 7,
    "kickoffAt": "2026-08-12T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-17>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 2,
    "displayName": "Big Dave",
    "emoji": "🐻",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 15,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-1>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 0,
    "displayName": "Craig",
    "emoji": "🐢",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-3>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 1,
    "displayName": "Gaz",
    "emoji": "🪃",
    "fixtureId": "<uuid-18>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-4>",
    "saves": 2,
    "tackles": 1,
  },
  {
    "assists": 1,
    "displayName": "Jonty",
    "emoji": "🎩",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 1,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-5>",
    "saves": 0,
    "tackles": 4,
  },
  {
    "assists": 2,
    "displayName": "Kaggy",
    "emoji": "🐆",
    "fixtureId": "<uuid-18>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-6>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 0,
    "displayName": "Leo",
    "emoji": "🦁",
    "fixtureId": "<uuid-18>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-7>",
    "saves": 4,
    "tackles": 3,
  },
  {
    "assists": 1,
    "displayName": "Marco",
    "emoji": "🍕",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-8>",
    "saves": 0,
    "tackles": 3,
  },
  {
    "assists": 1,
    "displayName": "Ndu",
    "emoji": "🌟",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-9>",
    "saves": 6,
    "tackles": 0,
  },
  {
    "assists": 2,
    "displayName": "Ollie",
    "emoji": "🦅",
    "fixtureId": "<uuid-18>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-10>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 2,
    "displayName": "Pieter",
    "emoji": "🧤",
    "fixtureId": "<uuid-18>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-11>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 1,
    "displayName": "Ruan",
    "emoji": "🧱",
    "fixtureId": "<uuid-18>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-12>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 2,
    "displayName": "Shaun",
    "emoji": "🦈",
    "fixtureId": "<uuid-18>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-13>",
    "saves": 5,
    "tackles": 0,
  },
  {
    "assists": 1,
    "displayName": "Sipho",
    "emoji": "⚡",
    "fixtureId": "<uuid-18>",
    "goals": 0,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-14>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 0,
    "displayName": "Thabo",
    "emoji": "🚀",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 9,
    "goalsFor": 8,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-15>",
    "saves": 0,
    "tackles": 2,
  },
  {
    "assists": 0,
    "displayName": "Themba",
    "emoji": "🔥",
    "fixtureId": "<uuid-18>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-16>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 0,
    "displayName": "Yusuf",
    "emoji": "🌊",
    "fixtureId": "<uuid-18>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 9,
    "kickoffAt": "2026-08-19T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-17>",
    "saves": 0,
    "tackles": 3,
  },
  {
    "assists": 0,
    "displayName": "Big Dave",
    "emoji": "🐻",
    "fixtureId": "<uuid-19>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-1>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 2,
    "displayName": "Craig",
    "emoji": "🐢",
    "fixtureId": "<uuid-19>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 15,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-3>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 1,
    "displayName": "Gaz",
    "emoji": "🪃",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-4>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 1,
    "displayName": "Jonty",
    "emoji": "🎩",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-5>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 1,
    "displayName": "Kaggy",
    "emoji": "🐆",
    "fixtureId": "<uuid-19>",
    "goals": 1,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-6>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 1,
    "displayName": "Leo",
    "emoji": "🦁",
    "fixtureId": "<uuid-19>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 1,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-7>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 0,
    "displayName": "Marco",
    "emoji": "🍕",
    "fixtureId": "<uuid-19>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-8>",
    "saves": 0,
    "tackles": 6,
  },
  {
    "assists": 1,
    "displayName": "Ndu",
    "emoji": "🌟",
    "fixtureId": "<uuid-19>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-9>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 2,
    "displayName": "Ollie",
    "emoji": "🦅",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-10>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 0,
    "displayName": "Pieter",
    "emoji": "🧤",
    "fixtureId": "<uuid-19>",
    "goals": 2,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-11>",
    "saves": 0,
    "tackles": 3,
  },
  {
    "assists": 1,
    "displayName": "Ruan",
    "emoji": "🧱",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-12>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 0,
    "displayName": "Shaun",
    "emoji": "🦈",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-13>",
    "saves": 3,
    "tackles": 5,
  },
  {
    "assists": 1,
    "displayName": "Sipho",
    "emoji": "⚡",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-14>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 1,
    "displayName": "Thabo",
    "emoji": "🚀",
    "fixtureId": "<uuid-19>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 7,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-15>",
    "saves": 0,
    "tackles": 1,
  },
  {
    "assists": 2,
    "displayName": "Themba",
    "emoji": "🔥",
    "fixtureId": "<uuid-19>",
    "goals": 0,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-16>",
    "saves": 2,
    "tackles": 4,
  },
  {
    "assists": 1,
    "displayName": "Yusuf",
    "emoji": "🌊",
    "fixtureId": "<uuid-19>",
    "goals": 1,
    "goalsAgainst": 7,
    "goalsFor": 8,
    "kickoffAt": "2026-08-26T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-17>",
    "saves": 7,
    "tackles": 3,
  },
  {
    "assists": 2,
    "displayName": "Big Dave",
    "emoji": "🐻",
    "fixtureId": "<uuid-20>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-1>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 1,
    "displayName": "Craig",
    "emoji": "🐢",
    "fixtureId": "<uuid-20>",
    "goals": 2,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-3>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 1,
    "displayName": "Gaz",
    "emoji": "🪃",
    "fixtureId": "<uuid-20>",
    "goals": 2,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-4>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 1,
    "displayName": "Jonty",
    "emoji": "🎩",
    "fixtureId": "<uuid-20>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-5>",
    "saves": 4,
    "tackles": 1,
  },
  {
    "assists": 1,
    "displayName": "Kaggy",
    "emoji": "🐆",
    "fixtureId": "<uuid-20>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-6>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 2,
    "displayName": "Leo",
    "emoji": "🦁",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-7>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 1,
    "displayName": "Marco",
    "emoji": "🍕",
    "fixtureId": "<uuid-20>",
    "goals": 2,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-8>",
    "saves": 0,
    "tackles": 2,
  },
  {
    "assists": 1,
    "displayName": "Ndu",
    "emoji": "🌟",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-9>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 2,
    "displayName": "Ollie",
    "emoji": "🦅",
    "fixtureId": "<uuid-20>",
    "goals": 1,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-10>",
    "saves": 0,
    "tackles": 3,
  },
  {
    "assists": 0,
    "displayName": "Pieter",
    "emoji": "🧤",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "loss",
    "playerId": "<uuid-11>",
    "saves": 2,
    "tackles": 5,
  },
  {
    "assists": 1,
    "displayName": "Ruan",
    "emoji": "🧱",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-12>",
    "saves": 5,
    "tackles": 4,
  },
  {
    "assists": 0,
    "displayName": "Shaun",
    "emoji": "🦈",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 0,
    "outcome": "win",
    "playerId": "<uuid-13>",
    "saves": 0,
    "tackles": 2,
  },
  {
    "assists": 0,
    "displayName": "Sipho",
    "emoji": "⚡",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 2,
    "outcome": "win",
    "playerId": "<uuid-14>",
    "saves": 0,
    "tackles": 0,
  },
  {
    "assists": 2,
    "displayName": "Thabo",
    "emoji": "🚀",
    "fixtureId": "<uuid-20>",
    "goals": 2,
    "goalsAgainst": 6,
    "goalsFor": 8,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 15,
    "nutmegs": 1,
    "outcome": "win",
    "playerId": "<uuid-15>",
    "saves": 0,
    "tackles": 5,
  },
  {
    "assists": 2,
    "displayName": "Themba",
    "emoji": "🔥",
    "fixtureId": "<uuid-20>",
    "goals": 0,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 0,
    "nutmegs": 1,
    "outcome": "loss",
    "playerId": "<uuid-16>",
    "saves": 4,
    "tackles": 1,
  },
  {
    "assists": 2,
    "displayName": "Yusuf",
    "emoji": "🌊",
    "fixtureId": "<uuid-20>",
    "goals": 2,
    "goalsAgainst": 8,
    "goalsFor": 6,
    "kickoffAt": "2026-09-02T16:00:00.000Z",
    "motmVotes": 1,
    "nutmegs": 2,
    "outcome": "loss",
    "playerId": "<uuid-17>",
    "saves": 0,
    "tackles": 0,
  },
]
`;

exports[`public queries > motmForFixture 1`] = `
[
  {
    "displayName": "Kaggy",
    "emoji": "🐆",
    "playerId": "<uuid-1>",
    "votes": 15,
  },
]
`;

exports[`public queries > nextFixture 1`] = `
{
  "cancelledReason": null,
  "capacity": 24,
  "id": "<uuid-1>",
  "kickoffAt": "2026-09-16T16:00:00.000Z",
  "status": "open",
  "venue": "Zandvlei Sports Ground",
}
`;

exports[`public queries > playerById 1`] = `
{
  "displayName": "Leo",
  "emoji": "🦁",
  "id": "<uuid-1>",
  "isActive": true,
  "rating": 72.5,
}
`;

exports[`public queries > ratingHistory 1`] = `
[
  {
    "at": "2026-08-29T16:00:00.000Z",
    "delta": 1,
    "fixtureId": "<uuid-1>",
    "ratingAfter": 69,
    "reason": "played",
  },
  {
    "at": "2026-08-22T16:00:00.000Z",
    "delta": 1,
    "fixtureId": "<uuid-2>",
    "ratingAfter": 68,
    "reason": "played",
  },
  {
    "at": "2026-08-15T16:00:00.000Z",
    "delta": 1,
    "fixtureId": "<uuid-3>",
    "ratingAfter": 67,
    "reason": "played",
  },
  {
    "at": "2026-08-08T16:00:00.000Z",
    "delta": 1,
    "fixtureId": "<uuid-4>",
    "ratingAfter": 66,
    "reason": "played",
  },
]
`;

exports[`public queries > seasonTable 1`] = `
[
  {
    "appearances": 4,
    "assists": 5,
    "avgSelfRating": 8.75,
    "displayName": "Big Dave",
    "draws": 0,
    "emoji": "🐻",
    "goals": 7,
    "losses": 2,
    "motmVotes": 15,
    "nutmegs": 6,
    "ownGoals": 0,
    "playerId": "<uuid-1>",
    "rating": 66,
    "saves": 0,
    "tackles": 12,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 3,
    "avgSelfRating": 6.5,
    "displayName": "Craig",
    "draws": 0,
    "emoji": "🐢",
    "goals": 7,
    "losses": 2,
    "motmVotes": 15,
    "nutmegs": 3,
    "ownGoals": 0,
    "playerId": "<uuid-2>",
    "rating": 60,
    "saves": 0,
    "tackles": 16,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 3,
    "avgSelfRating": 6.5,
    "displayName": "Gaz",
    "draws": 0,
    "emoji": "🪃",
    "goals": 2,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 4,
    "ownGoals": 0,
    "playerId": "<uuid-3>",
    "rating": 62,
    "saves": 2,
    "tackles": 13,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 3,
    "avgSelfRating": 8.75,
    "displayName": "Jonty",
    "draws": 0,
    "emoji": "🎩",
    "goals": 3,
    "losses": 2,
    "motmVotes": 1,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-4>",
    "rating": 69,
    "saves": 4,
    "tackles": 10,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 6,
    "avgSelfRating": 7,
    "displayName": "Kaggy",
    "draws": 0,
    "emoji": "🐆",
    "goals": 5,
    "losses": 2,
    "motmVotes": 15,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-5>",
    "rating": 71,
    "saves": 0,
    "tackles": 4,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 3,
    "avgSelfRating": 6.5,
    "displayName": "Leo",
    "draws": 0,
    "emoji": "🦁",
    "goals": 3,
    "losses": 2,
    "motmVotes": 1,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-6>",
    "rating": 72.5,
    "saves": 4,
    "tackles": 9,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 3,
    "avgSelfRating": 6,
    "displayName": "Marco",
    "draws": 0,
    "emoji": "🍕",
    "goals": 8,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 6,
    "ownGoals": 0,
    "playerId": "<uuid-7>",
    "rating": 67.5,
    "saves": 6,
    "tackles": 11,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 4,
    "avgSelfRating": 7.5,
    "displayName": "Ndu",
    "draws": 0,
    "emoji": "🌟",
    "goals": 3,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 4,
    "ownGoals": 0,
    "playerId": "<uuid-8>",
    "rating": 68.5,
    "saves": 6,
    "tackles": 12,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 6,
    "avgSelfRating": 6.25,
    "displayName": "Ollie",
    "draws": 0,
    "emoji": "🦅",
    "goals": 1,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 4,
    "ownGoals": 0,
    "playerId": "<uuid-9>",
    "rating": 63,
    "saves": 0,
    "tackles": 10,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 4,
    "avgSelfRating": 6.75,
    "displayName": "Pieter",
    "draws": 0,
    "emoji": "🧤",
    "goals": 4,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-10>",
    "rating": 70,
    "saves": 8,
    "tackles": 19,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 5,
    "avgSelfRating": 8.25,
    "displayName": "Ruan",
    "draws": 0,
    "emoji": "🧱",
    "goals": 0,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 1,
    "ownGoals": 0,
    "playerId": "<uuid-11>",
    "rating": 64.5,
    "saves": 5,
    "tackles": 11,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 2,
    "avgSelfRating": 9,
    "displayName": "Shaun",
    "draws": 0,
    "emoji": "🦈",
    "goals": 2,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 3,
    "ownGoals": 1,
    "playerId": "<uuid-12>",
    "rating": 65.5,
    "saves": 8,
    "tackles": 13,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 3,
    "avgSelfRating": 6.25,
    "displayName": "Sipho",
    "draws": 0,
    "emoji": "⚡",
    "goals": 2,
    "losses": 2,
    "motmVotes": 1,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-13>",
    "rating": 78,
    "saves": 0,
    "tackles": 4,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 4,
    "avgSelfRating": 6.25,
    "displayName": "Thabo",
    "draws": 0,
    "emoji": "🚀",
    "goals": 8,
    "losses": 2,
    "motmVotes": 15,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-14>",
    "rating": 75.5,
    "saves": 0,
    "tackles": 12,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 4,
    "avgSelfRating": 6,
    "displayName": "Themba",
    "draws": 0,
    "emoji": "🔥",
    "goals": 1,
    "losses": 2,
    "motmVotes": 0,
    "nutmegs": 5,
    "ownGoals": 0,
    "playerId": "<uuid-15>",
    "rating": 74,
    "saves": 6,
    "tackles": 8,
    "wins": 2,
  },
  {
    "appearances": 4,
    "assists": 4,
    "avgSelfRating": 8.75,
    "displayName": "Yusuf",
    "draws": 0,
    "emoji": "🌊",
    "goals": 6,
    "losses": 2,
    "motmVotes": 1,
    "nutmegs": 8,
    "ownGoals": 0,
    "playerId": "<uuid-16>",
    "rating": 66.5,
    "saves": 7,
    "tackles": 7,
    "wins": 2,
  },
]
`;

exports[`public queries > streakInputs 1`] = `
{
  "byPlayer": [
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Big Dave",
      "emoji": "🐻",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Craig",
      "emoji": "🐢",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Gaz",
      "emoji": "🪃",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Jonty",
      "emoji": "🎩",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Kaggy",
      "emoji": "🐆",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Leo",
      "emoji": "🦁",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Marco",
      "emoji": "🍕",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Ndu",
      "emoji": "🌟",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Ollie",
      "emoji": "🦅",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Pieter",
      "emoji": "🧤",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Ruan",
      "emoji": "🧱",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Shaun",
      "emoji": "🦈",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Sipho",
      "emoji": "⚡",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Thabo",
      "emoji": "🚀",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Themba",
      "emoji": "🔥",
    },
    {
      "appearedInWeeks": [
        1,
        2,
        3,
        4,
      ],
      "displayName": "Yusuf",
      "emoji": "🌊",
    },
  ],
  "weeks": 4,
}
`;

exports[`public queries > teamsForFixture 1`] = `
[
  {
    "colour": "kit-black",
    "goals": 7,
    "id": "<uuid-1>",
    "name": "Black",
    "players": [
      {
        "displayName": "Big Dave",
        "emoji": "🐻",
        "isSub": false,
        "playerId": "<uuid-2>",
      },
      {
        "displayName": "Jonty",
        "emoji": "🎩",
        "isSub": false,
        "playerId": "<uuid-3>",
      },
      {
        "displayName": "Kaggy",
        "emoji": "🐆",
        "isSub": false,
        "playerId": "<uuid-4>",
      },
      {
        "displayName": "Leo",
        "emoji": "🦁",
        "isSub": false,
        "playerId": "<uuid-5>",
      },
      {
        "displayName": "Ollie",
        "emoji": "🦅",
        "isSub": false,
        "playerId": "<uuid-6>",
      },
      {
        "displayName": "Pieter",
        "emoji": "🧤",
        "isSub": false,
        "playerId": "<uuid-7>",
      },
      {
        "displayName": "Themba",
        "emoji": "🔥",
        "isSub": false,
        "playerId": "<uuid-8>",
      },
      {
        "displayName": "Yusuf",
        "emoji": "🌊",
        "isSub": false,
        "playerId": "<uuid-9>",
      },
    ],
    "side": "a",
  },
  {
    "colour": "kit-white",
    "goals": 9,
    "id": "<uuid-10>",
    "name": "White",
    "players": [
      {
        "displayName": "Craig",
        "emoji": "🐢",
        "isSub": false,
        "playerId": "<uuid-11>",
      },
      {
        "displayName": "Gaz",
        "emoji": "🪃",
        "isSub": false,
        "playerId": "<uuid-12>",
      },
      {
        "displayName": "Marco",
        "emoji": "🍕",
        "isSub": false,
        "playerId": "<uuid-13>",
      },
      {
        "displayName": "Ndu",
        "emoji": "🌟",
        "isSub": false,
        "playerId": "<uuid-14>",
      },
      {
        "displayName": "Ruan",
        "emoji": "🧱",
        "isSub": false,
        "playerId": "<uuid-15>",
      },
      {
        "displayName": "Shaun",
        "emoji": "🦈",
        "isSub": false,
        "playerId": "<uuid-16>",
      },
      {
        "displayName": "Sipho",
        "emoji": "⚡",
        "isSub": false,
        "playerId": "<uuid-17>",
      },
      {
        "displayName": "Thabo",
        "emoji": "🚀",
        "isSub": false,
        "playerId": "<uuid-18>",
      },
    ],
    "side": "b",
  },
]
`;
